[package]
name = "tweaked"
version = "0.0.3"
description = "Fine tune your data."
authors = ["Automators"]
license = ""
repository = ""
default-run = "tweaked"
edition = "2021"
rust-version = "1.78"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
rand = "0.8.5"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
tauri-plugin-updater = { version = "2.0.0-beta", features = ["rustls-tls"] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-process = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
